2010-01-01  Matevz Tadel  <matevz.tadel@ijs.si>

	* macros/mac_hack.C:
	Removed obsolete file - the real problem was too small stack size.

2010-01-01  Matevz Tadel  <matevz.tadel@ijs.si>

	Make sure TRint thread has at least 8MB of stack. It didn't on OSX.

	* Gled/GThread.cxx:
	* Gled/GThread.h:
	Add static data-member 'int sMinStackSize' and data member 'int
	mStackSize'. The static one is initialized to zero first and the
	non-static is initialized to the values of the static one in
	constructor.
	If mStackSize is non-zero in Spawn() function and the default
	stack size is below its value the stack-size is increased for the
	spawning thread.

	* Gled/Gled.cxx:
	* Gled/Gled.h:
	* gled.cxx:
	* saturn.cxx:
	Move common TRint-thread spawning code from gled.cxx and
	saturn.cxx to class Gled.
	Make sure TRint thread runs with at least 8MB of stack.

2009-12-30  Matevz Tadel  <matevz.tadel@ijs.si>

	Add support for user libset shutdown functions.
	The same naming conventions apply as for user libset init
	functions.

	* Gled/GledNS.cxx:
	* Gled/GledNS.h:
	Add the following functions namespace GledNS:
	  void  ShutdownLibSet(const TString& lib_set);
	  void  ShutdownLibSets();
	  TString FabricateUserShutdownFoo(const TString& libset);
	In InitSoSet() push the newly initialized libset to a global list
	'LibSetList' of initialized libsets. GledCore is not in this list.

	Beautify code somewhat.

	* Gled/Gled.cxx:
	Call GledNS::ShutdownLibSets() at the end of shutdown thread
	function.

2009-12-29  Matevz Tadel  <matevz.tadel@ijs.si>

	* macros/mac_hack.C:
	Remove extra libset loading - this was solved by renaming libset GTS
	to GledGTS.

2009-12-25  Matevz Tadel  <matevz.tadel@ijs.si>

	Fixes for OSX build and running.

	* Ephra/Mountain.cxx:
	Define _XOPEN_SOURCE on osx. Otherwise some functions from
	ucontext.h do not get exported.

	* macros/mac_hack.C:
	Hackish macro that attempts to bypass issues with CINT and dynamic
	library loading on osx.
